--- a/TPOT_Borouge_Comp.ipynb
+++ b/TPOT_Borouge_Comp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TPOT-Borouge-Comp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlsqonqZ5iWlk28keBxiqa",
+      "authorship_tag": "ABX9TyO3o/obfRuYZB3fbdEBINWn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1397,6 +1397,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Trouble shooting the string problem**"
+      ],
+      "metadata": {
+        "id": "Ijk3YF59Aw4R"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
@@ -1424,7 +1433,7 @@
           "height": 73
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1469,7 +1478,7 @@
           "height": 261
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,7 +1635,7 @@
         "id": "JxrpiaA1jhgk",
         "outputId": "25aa7740-89b6-4230-f186-fc43fa955ff1"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1760,7 +1769,7 @@
       "metadata": {
         "id": "ta59QV6OtWgi"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1794,7 +1803,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1853,7 +1862,7 @@
         "id": "dizX0T9gbZFm",
         "outputId": "8bd5b700-2a9f-4f1f-8d55-a65ed6ee9b3a"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1898,7 +1907,7 @@
         "id": "r6imefAevL5B",
         "outputId": "d0606b11-9520-4e1a-d08e-bd910ff496e3"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1950,7 +1959,7 @@
         "id": "B_tVF2SUvwyv",
         "outputId": "20170a4e-c369-4224-dc0e-05415bfb9079"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
